[package]
name = "csp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tabled = { version = "0.10.0", features = ["color"] }
walkdir = "2.3.2"